--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,6 @@ import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
 import Header from "../components/Header.astro";
 import Algo from "../components/Algo";
-import Title3D from "../components/Title3D";
 ---
 
 <Layout title="Home">
@@ -13,30 +12,26 @@ import Title3D from "../components/Title3D";
     <section
       class="w-screen h-fit flex flex-col items-center justify-center bg-gradient-to-r from-blue-100 to-blue-400 py-28 gap-5"
     >
-      <h1 class="text-7xl font-bold">
-        Simulador de Neonatos en Realidad Virtual
-      </h1>
-      <div class="h-80 w-full bg bg-red-300 flex justify-start items-start">
-        <Title3D client:load />
-      </div>
+      <Algo client:load/>
+      
       <p>
         Entrena en un entorno seguro y realista. Perfecciona tus habilidades en
         el cuidado neonatal con nuestra avanzada tecnología VR.
       </p>
       <div class="flex flex-row items-end justify-center gap-4">
-        <button>Solicitar demo</button>
+        <button class="bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-300 hover:text-black  transition">Solicitar demo</button>
         <div class="flex flex-col items-center gap-2">
           <p class="text-sm font-extralight">¿Tienes una cuentas?</p>
-          <button>Iniciar sesión</button>
+          <button class="bg-white text-black px-4 py-2 rounded-md hover:bg-slate-400 hover:text-white transition">Iniciar sesión</button>
         </div>
       </div>
     </section>
-    <section>
-      <h1>Caracteristicas Principales</h1>
+    <section class="flex flex-col items-center justify-center gap-10 py-10 px-20">
+      <h1 class="text-6xl">Caracteristicas Principales</h1>
       <div class="flex flex-row justify-around gap-10">
-        <Card title="hola" body="dasdasd" href="/" />
-        <Card title="hola" body="dasdasd" href="/" />
-        <Card title="hola" body="dasdasd" href="/" />
+        <Card title="Inmersión Total" body="Experimenta un entorno de UCIN completamente inmersivo y realista." />
+        <Card title="Escenarios Realistas" body="Enfrenta casos clínicos variados y desafiantes en tiempo real." />
+        <Card title="Aprendizaje Adaptativo" body="Sistema de IA que se adapta a tu nivel de habilidad y progreso."  />
       </div>
     </section>
   </main>
