--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -2,17 +2,15 @@
 interface Props {
 	title: string;
 	body: string;
-	href: string;
 }
 
-const { href, title, body } = Astro.props;
+const {title, body } = Astro.props;
 ---
 
 <li class="link-card">
-	<a href={href}>
+	<a >
 		<h2>
 			{title}
-			<span>&rarr;</span>
 		</h2>
 		<p>
 			{body}
