--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,7 @@
 import { Icon } from "astro-icon/components";
 ---
 
-<div class="w-screen h-70 bg-slate-100 flex justify-between items-center px-10">
+<div class="w-screen h-70 bg-slate-100 flex justify-between items-center px-10 z-10">
   <div class="flex flex-row gap-4 justify-center items-center">
     <Icon name="baby" width={50} height={50} class="text-white" />
     <p class="text-black text-1 font-semibold">NeoSimVR</p>
