--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -43,6 +43,7 @@ const { title } = Astro.props;
   body {
     margin: 0;
     font-family: "Inter", sans-serif;
+    z-index: 0;
   }
   html {
     font-family: system-ui, sans-serif;
